# GraphiEXTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/model/Nightshade/: Breakdance Freeze Var 2.dae
assets/shader/Gizmo/: fragment.shader  vertex.shader
assets/shader/Model/: fragment.shader  vertex.shader
assets/shader/Objects/: fragment.shader  vertex.shader
assets/shader/SoftBody/CornellBox/: green.shader  red.shader  white.shader
assets/shader/SoftBody/Cube/: fragment.shader  vertex.shader
assets/shader/VolumeRender/: fragment.shader  vertex.shader
core/: CMakeLists.txt
core/Common/: color.hpp  perlin.hpp  softbody_effect.hpp  util.hpp
core/Common/Debug/: debugGLM.hpp
core/Common/Enums/: object_type.hpp  transform_mode.hpp
core/Common/Math/: interpolation.hpp  volume_generation.hpp
core/Common/Util/: assim_glm_convert.hpp  threadpool.hpp  volume.hpp
core/ControlPanel/: control_panel.cpp  control_panel.hpp  event.cpp  gui.cpp  window.cpp
core/GLObjects/: animation.hpp  animator.hpp  bone.hpp  mesh.hpp  model.hpp  model_loader.hpp  read_object_file.cpp  read_object_file.hpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
core/GLObjects/Mesh/: mesh.cpp  mesh.hpp
core/GLObjects/Texture/: texture.cpp  texture.hpp
core/GLObjects/VBLayout/: vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
core/Graphics/: framebuffer.hpp  model.hpp
core/Graphics/Animation/: animation.hpp  animator.hpp  bone.hpp
core/Graphics/Mesh/: mesh.hpp
core/Graphics/Shader/: setters.cpp  shader.cpp  shader.hpp
core/Graphics/Texture/: texture.cpp  texture.hpp
core/Graphics/VBLayout/: vertex_buffer_layout.cpp
core/Objects3D/: Integrate.hpp
core/Physics/: softbody.hpp  softbody_effect.hpp
core/Render/: event.cpp  multi_scenes_option.hpp  render.cpp  render.hpp  scene.hpp  setup.cpp
core/Scenes/: multi_scenes_option.hpp  scene.hpp
docs/: CMakeLists.txt  README-pt-br.md
examples/: CMakeLists.txt
examples/Model/: model_render.cpp  model_render.hpp
examples/Objects/: objects.cpp  objects.hpp
examples/Scenes/: volumetric_scene.hpp
examples/ScenesRender/: softbody_scene.hpp  volumetric_scene.hpp
examples/SoftBodyRender/: soft_body_render.cpp  soft_body_render.hpp
examples/Volume/: volume_obj.cpp  volume_obj.hpp
examples/VolumetricRender/: volumetric_render.cpp
src/: CMakeLists.txt  main.cpp
src/ControlPanel/: control_panel.hpp
src/Model/: model_render.cpp  model_render.hpp
src/Objects/: objects.cpp  objects.hpp
src/Render/: render.cpp  render.hpp
src/Scenes/: simple_scene.hpp
src/SimpleScene/: simple_scene.cpp  simple_scene.hpp
src/VolumetricRender/: density.cpp  volumetric_render.cpp  volumetric_render.hpp
tests/: CMakeLists.txt  main.cpp  util.cpp
tests/core/Common/: test_color.cpp  test_perlin.cpp  test_util.cpp
tests/core/GLObjects/: test_interpolation.cpp
tests/core/Objects3D/: test_cylinder.cpp  test_plane.cpp  test_sphere.cpp
